# DUST_Hero

./: .gitignore  CMakeLists.txt  RUN_SERIAL_DEBUG.md  debug_serial_init  debug_serial_init.cpp  run.sh  run_with_display.sh  serial_debug  serial_debug.cpp  serial_debug_detailed  serial_debug_detailed.cpp  test_struct_size  test_struct_size.cpp
data/uniconfig/: Config.json
include/data_manager/: base.h  param.h
include/threads/: control.h  pipeline.h
include/threads/control/: structure.h
src/: main.cpp
src/data_manager/: CMakeLists.txt  base.cpp  init.cpp  param.cpp
src/garage/: CMakeLists.txt
src/threads/: CMakeLists.txt  control.cpp  display_thread.cpp
src/threads/control/: receive_thread.cpp  send_thread.cpp
src/threads/pipeline/: image_thread.cpp  recording_thread.cpp
src/threads/pipeline/baseline/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
src/threads/pipeline/baseline/tracker/: classifier.cpp  pointer.cpp
src/threads/pipeline/fourpoints/: detector_thread.cpp  fourpoints.cpp
src/threads/pipeline/rune/: detector_thread.cpp
